# deepkernel-mono

./: .gitattributes  ARCHITECTURE_DKC.md  ARCHITECTURE_DKO.md  FRONDEND_PLAN.md  MASTER_PLAN.md  README.md  changes.patch  docker-compose.demo.yml  docker-compose.windows.yml
agent/: CMakeLists.txt  Dockerfile  README.md
agent/config/: agent-config.yaml
agent/ebpf/: deepkernel.bpf.c  vmlinux.h
agent/include/: agent.h  agent_server.h  buffer_manager.h  config.h  container_mapper.h  docker_mapper.h  event_types.h  http_client.h  policy_enforcer.h  serialization.h  syscall_event.h
agent/src/: agent.cpp  agent_server.cpp  config.cpp  container_mapper.cpp  docker_mapper.cpp  http_client.cpp  main.cpp  policy_enforcer.cpp  serialization.cpp
agent/tests/: container_mapper_tests.cpp  docker_mapper_tests.cpp  policy_enforcer_tests.cpp  serialization_tests.cpp
demo-apps/bachat-bank/: DEMO.md  README.md  docker-compose.yml
demo-apps/bachat-bank/backend/: Dockerfile  main.py  requirements.txt
demo-apps/bachat-bank/frontend/: Dockerfile  index.html  package.json  vite.config.js
demo-apps/bachat-bank/scripts/: blast-anomaly.sh  demo-full.sh  demo-restore.sh  demo-simulate.sh  demo-threat.sh  inject-anomaly.py  retrain-sensitive.sh  set-mode.sh  simulate-threat.sh  watch-score.sh
demo-apps/e-commerce-api/: README.md  docker-compose.yml
demo-apps/photo-gallery/: README.md  docker-compose.yml
docs/: API_SPEC.md  FEATURES.md
ml-service/: Dockerfile  README.md  TRAINING_GUIDE.md  conftest.py  requirements.txt
ml-service/src/: __init__.py  config.py  main.py  schemas.py
ml-service/tests/: test_health.py  test_models.py  test_score.py  test_train.py
ml-service/tools/: __init__.py  analyze_training_data.py  e2e_validate.py  model_stats.py  quick_score.py  request_dump.py  test_with_real_data.py  train_baseline.py  train_demo_sensitive.py  train_from_dump.py  validate_dump.py
scripts/: agent-health.sh  apply-seccomp-profile.sh  explain-deep-kernel.sh  hit-service-random.sh  hit-service.sh  ml-health.sh  mock-agent-send.sh  server-check.sh  set-change-context.sh  smoke.sh  test-triage-live.sh  triage-test.sh
server/: Dockerfile  README.md  build.gradle  gradlew  settings.gradle
server/anomaly-engine/: build.gradle
server/cicd-integration/: build.gradle
server/contracts/: build.gradle
server/core/: build.gradle
server/policy-engine/: build.gradle
server/triage-service/: build.gradle
server/ui-frontend/: Dockerfile  index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
(+114 files in other folders)
